add start block

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -17,6 +17,7 @@
                         <div class="logo__text">Shelter for pets in Boston</div>
                     </a>
                 </div>
+                <div class="burger__menu"></div>
                 <nav class="menu">
                     <ul class="menu__list">
                         <li class="menu__item"><a data-goto=".about" class="menu__link active__link" href="#">About the shelter</a><div class="link__line"></div></li>
@@ -33,7 +34,12 @@
                     <div class="start__body">
                         <h1 class="start__title">Not only people need a house</h1>
                         <p class="start__description">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
-                        <div class=""></div>
+                        <div class="start__button">
+                            <button class="page__button">Make a friend</button>
+                        </div>
+                    </div>
+                    <div class="start__image">
+                        <img src="./assets/images/start/startScreenPuppy.png" alt="puppy">
                     </div>
                 </div>
             </section>
