--- a/shelter/index.html
+++ b/shelter/index.html
@@ -55,6 +55,63 @@
                     </div>
                 </div>
             </section>
+            <section class="pets">
+                <div class="pets__container _container">
+                    <h2 class="page__title pets__title">Our friends who are looking for a house</h2>
+                    <div class="pets__body">
+                        <div class="pets__arrow">
+                            <img src="../shelter/assets/icons/arrowLeft.svg" alt="left arrow">
+                        </div>
+                        <div class="pets__cards">
+                            <div class="card__item">
+                                <div class="card__image">
+                                    <img src="../shelter/assets/images/pets/petsKatrine.png" alt="Katrine">
+                                </div>
+                                <h3 class="card__title">Katrine</h3>
+                                <div class="card__button">
+                                    <button>Learn more</button>
+                                </div>
+                            </div>
+                            <div class="card__item">
+                                <div class="card__image">
+                                    <img src="../shelter/assets/images/pets/petsJennifer.png" alt="Jennifer">
+                                </div>
+                                <h3 class="card__title">Jennifer</h3>
+                                <div class="card__button">
+                                    <button>Learn more</button>
+                                </div>
+                            </div>
+                            <div class="card__item">
+                                <div class="card__image">
+                                    <img src="../shelter/assets/images/pets/petsWoody.png" alt="Woody">
+                                </div>
+                                <h3 class="card__title">Woody</h3>
+                                <div class="card__button">
+                                    <button>Learn more</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="pets__arrow">
+                            <img src="../shelter/assets/icons/arrowRight.svg" alt="right arrow">
+                        </div>
+                    </div>    
+                    <div class="pets__button">
+                        <button class="page__button">Get to know the rest</button>
+                    </div>
+                </div>
+            </section>
+            <section class="help">
+                <div class="help__container _container">
+                    <h2 class="page__title help__title">How you can help our shelter</h2>
+                    <div class="pets__features">
+                        <div class="features__item">
+                            <div class="features__image">
+                                <img src="" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             
