--- a/shelter/index.html
+++ b/shelter/index.html
@@ -106,8 +106,57 @@
                     <div class="pets__features">
                         <div class="features__item">
                             <div class="features__image">
-                                <img src="" alt="">
+                                <img src="../shelter/assets/icons/help/petFood.svg" alt="pet food">
                             </div>
+                            <div class="features__text">Pet food</div>
+                        </div>
+                        <div class="features__item">
+                            <div class="features__image">
+                                <img src="../shelter/assets/icons/help/transportation.svg" alt="transportation">
+                            </div>
+                            <div class="features__text">Transportation</div>
+                        </div>
+                        <div class="features__item">
+                            <div class="features__image">
+                                <img src="../shelter/assets/icons/help/toys.svg" alt="toys">
+                            </div>
+                            <div class="features__text">Toys</div>
+                        </div>
+                        <div class="features__item">
+                            <div class="features__image">
+                                <img src="../shelter/assets/icons/help/bowlsAndCups.svg" alt="bowls and cups">
+                            </div>
+                            <div class="features__text">Bowls and cups</div>
+                        </div>
+                        <div class="features__item">
+                            <div class="features__image">
+                                <img src="../shelter/assets/icons/help/shampoos.svg" alt="shampoos">
+                            </div>
+                            <div class="features__text">Shampoos</div>
+                        </div>
+                        <div class="features__item">
+                            <div class="features__image">
+                                <img src="../shelter/assets/icons/help/vitamins.svg" alt="vitamins">
+                            </div>
+                            <div class="features__text">Vitamins</div>
+                        </div>
+                        <div class="features__item">
+                            <div class="features__image">
+                                <img src="../shelter/assets/icons/help/medicines.svg" alt="medicines">
+                            </div>
+                            <div class="features__text">Medicines</div>
+                        </div>
+                        <div class="features__item">
+                            <div class="features__image">
+                                <img src="../shelter/assets/icons/help/collars.svg" alt="collars">
+                            </div>
+                            <div class="features__text">Collars &frasl;	leashes</div>
+                        </div>
+                        <div class="features__item">
+                            <div class="features__image">
+                                <img src="../shelter/assets/icons/help/sleepingArea.svg" alt="sleeping areas">
+                            </div>
+                            <div class="features__text">Sleeping areas</div>
                         </div>
                     </div>
                 </div>
