--- a/shelter/index.html
+++ b/shelter/index.html
@@ -161,6 +161,21 @@
                     </div>
                 </div>
             </section>
+            <section class="donation">
+                <div class="donation__container _container">
+                    <div class="donation__image">
+                        <img src="../shelter/assets/images/donation/donationDog.png" alt="big lying dog">
+                    </div>
+                    <div class="donation__content">
+                        <h2 class="page__title donation__title">You can also make a donation</h2>
+                        <h3 class="donation__subtitle">Name of the bank / Type of bank account</h3>
+                        <div class="donation__credit-card">
+                            <a class="credit-card__link" href="">8380 2880 8028 8791 7435</a>
+                        </div>
+                        <p class="donation__text">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             
