--- a/shelter/index.html
+++ b/shelter/index.html
@@ -178,7 +178,29 @@
             </section>
         </main>
         <footer class="footer">
-            
+            <div class="footer__container _container">
+                <div class="footer__contacts">
+                    <h2 class="contacts__title">For questions and suggestions</h2>
+                    <div class="contacts__item contacts__email">
+                        <a href="mailto:email@shelter.com">email@shelter.com</a>
+                    </div>
+                    <div class="contacts__item contacts__phone">
+                        <a href="tel:+136745677554">+13 674 567 75 54</a>
+                    </div>
+                </div>
+                <div class="footer__contacts">
+                    <h2 class="contacts__title">We are waiting for your visit</h2>
+                    <div class="contacts__item contacts__map">
+                        <a href="https://maps.google.com?q=760+West+Genesee+Street+Syracuse+NY+13204" target="_blank">1 Central Street, Boston (entrance from the store)</a>
+                    </div>
+                    <div class="contacts__item contacts__map">
+                        <a href="https://maps.google.com?q=760+West+Genesee+Street+Syracuse+NY+13204" target="_blank">18 South Park, London </a>
+                    </div>
+                </div>
+                <div class="footer__image">
+                    <img src="../shelter/assets/images/footer/footerPuppy.png" alt="puppy licking screen">
+                </div>
+            </div>
         </footer>
     </div>
 </body>
