--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -29,7 +29,92 @@
             </div>
         </header>
         <main class="main">
-
+            <section class="pets"> 
+                <div class="pets__container _container">
+                    <h2 class="page__title pets__title">Our friends who are looking for a house</h2>
+                        <div class="pets__cards">
+                            <div class="card__item">
+                                <div class="card__image">
+                                    <img src="../shelter/assets/images/pets/petsKatrine.png" alt="Katrine">
+                                </div>
+                                <h3 class="card__title">Katrine</h3>
+                                <div class="card__button">
+                                    <button>Learn more</button>
+                                </div>
+                            </div>
+                            <div class="card__item">
+                                <div class="card__image">
+                                    <img src="../shelter/assets/images/pets/petsJennifer.png" alt="Jennifer">
+                                </div>
+                                <h3 class="card__title">Jennifer</h3>
+                                <div class="card__button">
+                                    <button>Learn more</button>
+                                </div>
+                            </div>
+                            <div class="card__item">
+                                <div class="card__image">
+                                    <img src="../shelter/assets/images/pets/petsWoody.png" alt="Woody">
+                                </div>
+                                <h3 class="card__title">Woody</h3>
+                                <div class="card__button">
+                                    <button>Learn more</button>
+                                </div>
+                            </div>
+                            <div class="card__item">
+                                <div class="card__image">
+                                    <img src="../shelter/assets/images/pets/petsSophia.png" alt="Sophia">
+                                </div>
+                                <h3 class="card__title">Sophia</h3>
+                                <div class="card__button">
+                                    <button>Learn more</button>
+                                </div>
+                            </div>
+                            <div class="card__item">
+                                <div class="card__image">
+                                    <img src="../shelter/assets/images/pets/petsTimmy.png" alt="Timmy">
+                                </div>
+                                <h3 class="card__title">Timmy</h3>
+                                <div class="card__button">
+                                    <button>Learn more</button>
+                                </div>
+                            </div>
+                            <div class="card__item">
+                                <div class="card__image">
+                                    <img src="../shelter/assets/images/pets/petsCharlie.png" alt="Charly">
+                                </div>
+                                <h3 class="card__title">Charlie</h3>
+                                <div class="card__button">
+                                    <button>Learn more</button>
+                                </div>
+                            </div>
+                            <div class="card__item">
+                                <div class="card__image">
+                                    <img src="../shelter/assets/images/pets/petsScarlet.png" alt="Scarlet">
+                                </div>
+                                <h3 class="card__title">Scarlet</h3>
+                                <div class="card__button">
+                                    <button>Learn more</button>
+                                </div>
+                            </div>
+                            <div class="card__item">
+                                <div class="card__image">
+                                    <img src="../shelter/assets/images/pets/petsFreddie.png" alt="Freddie">
+                                </div>
+                                <h3 class="card__title">Freddie</h3>
+                                <div class="card__button">
+                                    <button>Learn more</button>
+                                </div>
+                            </div>
+                        </div>    
+                        <div class="pets__control">
+                            <button disabled class="disabled__button">&#60;&#60;</button>
+                            <button disabled class="disabled__button">&#60;</button>
+                            <button class="colored__button">1</button>
+                            <button class="bordered__button">&#62;</button>
+                            <button class="bordered__button">&#62;&#62;</button>
+                        </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="footer__container _container">
